# keykeeper

./: .CLAUDE.md  .env.example  .gitignore  AUTHENTICATION_LOGIC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENTERPRISE_ROADMAP.md  GEMINI.md  IMPLEMENTAZIONE_COMPLETATA.md  LICENSE  LLM_INTEGRATION_FIXES.md  MAIN_RS_ANALYSIS_REPORT.md  NATIVE_CHECKLIST.md  NATIVE_FEATURES_GUIDE.md  NATIVE_MIGRATION_PLAN.md  PRIVACY_POLICY.md  README.md  SECURITY.md  START_HERE.md  TERMS_OF_SERVICE.md  USER-GUIDE.md  VSCODE_INTEGRATION.md  llm-integration-plan.md  next.config.js  package-lock.json  package.json  plan.md  prettier.config.js  reset-auth.js  setup-native-migration.sh  tailwind.config.js  test-keyring.js  tsconfig.json
.github/workflows/: build.yml  release.yml  security.yml
components/: ApiKeyDetail.tsx  ApiKeyList.tsx  AuthManager.tsx  BiometricLogin.tsx  BottomSheet.tsx  DragDropZone.tsx  LoginScreen.tsx  MLSuggestions.tsx  MainLayout.tsx  ProjectDashboard.tsx  ProjectPathDisplay.tsx  ProjectSelector.tsx  SetMasterPasswordScreen.tsx  SettingsScreen.tsx  Sidebar.tsx  ThemeToggle.tsx  UnlockVaultScreen.tsx  VSCodeStatusIndicator.tsx
components/chat/: ChatConnectionModal.tsx  ChatPreferencesModal.tsx  ChatSessionList.tsx  ChatSidebar.tsx  CodePreviewModal.tsx
components/docs/: ApiDocumentationSection.tsx  DocsManagementModal.tsx  ProjectDocsSection.tsx
components/documentation/: DocumentationLibraryInterface.tsx  ManualDocumentationEntry.tsx
components/modals/: AddApiKeyModal.tsx  AllDocumentationModal.tsx  AssignKeysModal.tsx  ConfigGenerationModal.tsx  DeleteApiKeyModal.tsx  DocumentationLibraryModal.tsx  DocumentationModal.tsx  EditApiKeyModal.tsx  ProjectModal.tsx
extensions/vscode/: .vscodeignore  LICENSE  README.md  keykeeper-vscode-0.1.0.vsix  keykeeper-vscode-1.0.0.vsix  keykeeper-vscode-2.0.0-enterprise.vsix  keykeeper-vscode-2.1.0.vsix  keykeeper-vscode-2.2.2.vsix  keykeeper-vscode-2.2.3.vsix  keykeeper-vscode-2.2.44.vsix  keykeeper-vscode-2.2.5.vsix  package-lock.json  package.json  tsconfig.json  webpack.config.js
lib/: store.ts  tauri-api.ts  types.ts  utils.ts
lib/hooks/: useMLEngine.ts
lib/services/: apiProviderService.ts  chatService.ts  docScraperService.ts  documentationLibraryService.ts  documentationService.ts  enhancedTemplateService.ts  frameworkDetectionService.ts  integrationService.ts  keyringService.ts  llmProxyService.ts  mlService.ts  nativeFeatures.ts  nativeStorageService.ts  progressiveEnhancementService.ts
lib/types/: chat.ts  documentation.ts  enhanced-templates.ts  index.ts
pages/: _app.tsx  index.tsx
scripts/: cleanup-test-env.sh  create-icon.sh  create-placeholder-icons.sh  deploy.sh  enterprise-build.sh  generate-icons.md  generate-icons.sh  post-install.js  setup-secrets.sh  setup.sh  test-complete-integration.js  test-env-integration.sh  test-env-parser.js  test-integration.js  test-native-features.js  test-vscode-server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: keykeeper.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_commands.rs  ai_enhanced_detector.rs  api_generator.rs  api_generator_commands.rs  chat_commands.rs  chat_engine.rs  contextual_suggestions.rs  docs_commands.rs  docs_generator.rs  docs_generator_commands.rs  docs_library_commands.rs  docs_manager.rs  documentation_library.rs  enhanced_api_commands.rs  enhanced_types.rs  framework_detector.rs  framework_generator_commands.rs  framework_generators.rs  llm_proxy.rs  llm_wrapper.rs  mail_service.rs  main.rs  ml_commands.rs  ml_engine.rs  ml_engine_simple.rs  setup_generator.rs  template_engine.rs  template_inheritance.rs  validation_engine.rs  validation_setup_commands.rs
styles/: globals.css
(+16 files in other folders)
